backend/build_error_2.txt
    Checking grapes-backend v0.1.0 (D:\2-Mozakra\Projects\GP-Project\Grapes\grapes-editor\backend)
error[E0505]: cannot move out of `buf` because it is borrowed
   --> src\routes\generate.rs:451:9
    |
235 |     let mut buf = Vec::new();
    |         ------- binding `buf` declared here
236 |     let mut zip = zip::ZipWriter::new(std::io::Cursor::new(&mut buf));
    |                                                            -------- borrow of `buf` occurs here
...
451 |         buf,
    |         ^^^ move out of `buf` occurs here
452 |     ))
453 | }
    | - borrow might be used here, when `zip` is dropped and runs the `Drop` code for type `ZipWriter`
    |
help: consider cloning the value if the performance cost is acceptable
    |
236 |     let mut zip = zip::ZipWriter::new(std::io::Cursor::new(&mut buf.clone()));
    |                                                                    ++++++++

For more information about this error, try `rustc --explain E0505`.
error: could not compile `grapes-backend` (bin "grapes-backend") due to 1 previous error
